@@ -273,7 +273,7 @@ QLogger.createWriter = function createWriter( writerSpec, callback ) {
             return callbackOrReturn(null, process.stderr);
         case 'tcp':
             hostport = name.split(":");
-            socket = net.connect({host: hostport[0], port: hostport[1]}, function() { callbackOrReturn(false, socket) });
+            socket = net.connect({host: hostport[0], port: hostport[1]}, function() { callbackOrReturn(null, socket) });
             socket.on('error', function(err) { callbackOrReturn(err) });
             return socket;
         case 'udp':
